LoopsMetaargument/c5-ec2instance.tf
#EC2 Instance
resource "aws_instance" "mynewec2" {
  ami = data.aws_ami.amz_linux.id
  instance_type = var.instance_type_def
  #instance_type = var.instance_type_list[1] # For List
  #instance_type = var.instance_type_map["prod"]  # For Map
  user_data              = file("${path.module}/app1-install.sh")
  key_name               = var.instance_keypair
  vpc_security_group_ids = [ aws_security_group.vpc-ssh.id, aws_security_group.vpc-web.id ]
  count                  = 2
  tags = {
    "Name" = "Count-Demo-${count.index}"
  }
}
